[package]
name = "asteroids"
version = "0.1.0"
authors = ["austi"]
edition = "2018"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.9.0"
rand = "0.7.3"
rust-embed = "5.7.0"
lazy_static = "1.4.0"
strum = "0.20"
strum_macros = "0.20"

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["bundled", "static-link", "ttf", "mixer"]
